--- a/src/views/HutangPiutang/styles/main.module.scss
+++ b/src/views/HutangPiutang/styles/main.module.scss
@@ -5,188 +5,274 @@
   max-width: $screen;
   height: 100vh;
   position: relative;
-  display: flex;
-  flex-direction: column;
-  header {
+  .top {
+    height: 175px;
+    position: relative;
+    background: white;
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      width: 100%;
+      height: 123px;
+      background: $primary;
+      border-radius: 0px 0px 30px 30px;
+    }
+    .wrapperCard {
+      position: relative;
+      height: 100%;
+      .title {
+        position: absolute;
+        top: 17px;
+        left: 0px;
+        width: 100%;
+        padding: 0px 18px;
+        h1 {
+          color: white;
+          font-size: 23px;
+          i {
+            margin-right: 12px;
+          }
+        }
+      }
+      .card {
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        padding: 0px 18px;
+        width: 100%;
+        .body {
+          background: white;
+          box-shadow: 0px 0px 20px rgba(85, 85, 85, 0.2);
+          border-radius: 8px;
+          padding: 8px;
+          section {
+            display: grid;
+            grid-template-columns: 50% 50%;
+            text-align: center;
+            padding: 10px;
+            .left,
+            .right {
+              h2 {
+                font-size: 16px;
+                line-height: 20px;
+              }
+              p {
+                font-weight: 400;
+                font-size: 12px;
+                line-height: 20px;
+                color: #969696;
+              }
+            }
+            .left {
+              border-right: 1px solid #e2e2e2;
+
+              h2 {
+                color: $primary;
+              }
+            }
+            .right {
+              h2 {
+                color: $danger;
+              }
+            }
+          }
+          footer {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            img {
+              margin-right: 12px;
+            }
+            span {
+              flex: 1;
+              font-weight: 500;
+              font-size: 12px;
+              line-height: 20px;
+            }
+            i {
+              font-size: 20px;
+              color: $primary;
+            }
+            border-top: 1px solid #e2e2e2;
+          }
+        }
+      }
+    }
+  }
+  .filter {
+    background: white;
+    padding: 0px 18px;
+    height: 55px;
     display: flex;
     align-items: center;
-    background-color: $primary;
-    button {
-      width: 56px;
-      height: 56px;
-      background-color: transparent;
-      border: none;
-      outline: none;
-      cursor: pointer;
-      font-size: 17px;
-      color: white;
-    }
-    h1 {
+    color: $primary;
+    gap: 12px;
+    font-size: 24px;
+    .formGrub {
       flex: 1;
-      font-size: 17px;
-      color: white;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      input {
+        font-size: 12px;
+        height: 100%;
+        flex: 1;
+        border: none;
+        outline: none;
+      }
+    }
+  }
+  button {
+    border: 1px solid transparent;
+    background-color: transparent;
+
+    cursor: pointer;
+  }
+  .btnFilter {
+    color: $primary;
+    font-size: 24px;
+  }
+  .list {
+    header {
+      padding: 0px 18px;
+      display: flex;
+      align-items: center;
+      height: 36px;
+      background: #f8f8f8;
+      border: 1px;
+      border-style: solid;
+      border-color: #eaeaea;
+      width: 100%;
+      ul {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        li {
+          font-weight: 700;
+          font-size: 12px;
+          line-height: 20px;
+          color: $link;
+          cursor: pointer;
+          &:hover,
+          &.active {
+            color: $primary;
+          }
+        }
+      }
+    }
+    section {
+      min-height: 200px;
+      background: white;
+      .empty {
+        height: 200px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        h1 {
+          text-align: center;
+          color: $primary;
+        }
+      }
+      .listData {
+        min-height: 200px;
+        max-height: calc(100vh - 400px);
+        overflow: auto;
+        .mainList {
+          display: flex;
+          padding: 18px;
+          border-bottom: 1px solid #eaeaea;
+          .label {
+            flex: 1;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 20px;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            text-transform: capitalize;
+            .box {
+              height: 35px;
+              width: 35px;
+              border-radius: 50%;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              background-color: $primary;
+              color: white;
+              font-weight: 500;
+              font-size: 18px;
+            }
+          }
+          .value {
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 20px;
+            color: $danger;
+            h1 {
+              font-size: 18px;
+            }
+            &.utangPelanggan {
+              color: $danger;
+              h1 {
+                color: $danger;
+              }
+            }
+            &.utangSaya {
+              color: $primary;
+              h1 {
+                color: $primary;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.detail {
+  margin-bottom: 15px;
+  .label {
+    color: #818181;
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .value {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #2e2e2e;
+    &.utangPelanggan {
+      color: $danger;
+      font-weight: 600;
+    }
+    &.utangSaya {
+      color: $primary;
       font-weight: 600;
     }
   }
-  section {
-    padding: 18px 18px calc(18px + 55px) 18px;
-    flex: 1;
-    background-color: white;
-    position: relative;
-
-    .choice {
-      width: 100%;
-      padding: 12px 0px;
-      border: none;
-      outline: none;
-      cursor: pointer;
-      background: #f8f8f8;
-      box-shadow: 0px 0px 8px rgba(85, 85, 85, 0.2);
-      border-radius: 8px;
-      font-weight: 600;
-      font-size: 14px;
-      line-height: 20px;
-      color: #2e2e2e;
-      margin-bottom: 20px;
-      i {
-        margin-right: 12px;
-      }
+  &:last-child {
+    margin-bottom: 0px;
+  }
+}
+table {
+  tbody {
+    .hutang,
+    .piutang {
+      text-align: right;
     }
-    .detailPelanggan {
-      margin-bottom: 15px;
-      .label {
-        color: #818181;
-        font-size: 14px;
-        line-height: 20px;
-      }
-      .value {
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 20px;
-        color: #2e2e2e;
-
-        &.hutang {
-          color: $danger;
-          font-weight: 600;
-        }
-        &.piutang {
-          color: $primary;
-          font-weight: 600;
-        }
-      }
+    .utangPelanggan {
+      color: $danger;
     }
-    input[type='radio'] {
-      display: none;
-      &[id='type1'] {
-        &:checked ~ .custom {
-          background-color: $danger;
-          color: white;
-          font-weight: 600;
-        }
-      }
-      &[id='type2'] {
-        &:checked ~ .custom {
-          background-color: $primary;
-          color: white;
-          font-weight: 600;
-        }
-      }
-    }
-    .select {
-      display: grid;
-      grid-template-columns: 50% 50%;
-      margin-bottom: 20px;
-      label {
-        text-align: center;
-        cursor: pointer;
-        .custom {
-          font-weight: 400;
-          font-size: 14px;
-          height: 100%;
-          padding: 12px 0px;
-          background-color: #e8e8e8;
-        }
-        &:first-child {
-          .custom {
-            border-radius: 8px 0px 0px 8px;
-          }
-        }
-        &:last-child {
-          .custom {
-            border-radius: 0px 8px 8px 0px;
-          }
-        }
-      }
-    }
-    .formGrub {
-      margin-bottom: 25px;
-      label {
-        display: inline-block;
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 20px;
-        color: #818181;
-        margin-bottom: 5px;
-      }
-      input {
-        display: block;
-        width: 100%;
-        border: none;
-        outline: none;
-        font-weight: 600;
-        font-size: 20px;
-        border-bottom: 1px solid #d8d8d8;
-        padding: 10px;
-      }
-      &.piutang {
-        input {
-          color: $danger;
-        }
-      }
-      &.take {
-        input {
-          color: $primary;
-        }
-      }
-    }
-    .form {
-      .formGrub {
-        color: #2e2e2e;
-        margin-bottom: 20px;
-        label {
-          font-weight: 400;
-          font-size: 12px;
-          line-height: 20px;
-          margin-bottom: 5px;
-        }
-        input {
-          font-weight: 400;
-          font-size: 14px;
-          line-height: 20px;
-        }
-      }
-    }
-    .save {
-      position: absolute;
-      bottom: 18px;
-      left: 18px;
-      width: calc(100% - 18px * 2);
-      max-width: calc($screen - 18px * 2);
-      font-weight: 600;
-      font-size: 16px;
-      line-height: 30px;
-      color: white;
-      background-color: $primary;
-      padding: 10px 0px;
-      border: 1px solid $primary;
-      outline: none;
-      box-shadow: 0px 0px 10px rgba(85, 85, 85, 0.25);
-      border-radius: 8px;
-      cursor: pointer;
-      &:disabled {
-        background: $link;
-        border: 1px solid $link;
-      }
+    .utangSaya {
+      color: $primary;
     }
   }
 }
